--- a/index.html
+++ b/index.html
@@ -49,13 +49,10 @@
                 Projects
 
             </a>
-            <a href="#"  class="sidebar-item">
-                Blog
-            </a>
             <div class="sidebar-item" id="contacts" style="display:flex; align-items: center;">
                 <div style="padding:0.5rem">
 
-                    <a href="#">
+                    <a href="https://github.com/ChauLe19">
                         <svg fill="#FFFFFF" xmlns="http://www.w3.org/2000/svg" width="2rem" height="2rem"
                             viewbox="0 0 24 24">
                             <path
@@ -64,7 +61,7 @@
                     </a>
                 </div>
                 <div style="padding:0.5rem">
-                    <a href="#">
+                    <a href="https://www.linkedin.com/in/chau-le-80b713192/">
                         <svg fill="#FFFFFF" xmlns="http://www.w3.org/2000/svg" width="2rem" height="2rem"
                             viewbox="0 0 24 24">
                             <path
