--- a/projects.html
+++ b/projects.html
@@ -246,7 +246,7 @@
 
                                 </div>
                                 <span style="font-size: 1.1rem;">
-                                    A smart home
+                                    a home automation prototype controllable by a computer GUI application via Bluetooth
                                 </span>
                             </div>
                         </div>
