--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
             </div>
         </div>
         <div style="justify-content: center; align-items: center; flex-grow:1;display: flex; font-size: 2rem;">
-            <div>Hi, I'm Chau Le<div>A programmer who enjoys making stuffs.</div></div>
+            <div>Hi, I'm Chau Le<div>A programmer who enjoys making stuff.</div></div>
         </div>
     </div>
 </body>
