--- a/TextTransformer/index.html
+++ b/TextTransformer/index.html
@@ -9,31 +9,9 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+Mono&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-    <!-- <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" -->
-    <!-- integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous"> -->
+    <script src="https://kit.fontawesome.com/cb0a44a524.js" crossorigin="anonymous"></script>
+    <link rel="stylesheet" href="../global.css">
     <style>
-        html {
-            height: 100%;
-            background: #190033;
-            color: #FFFFFF;
-            font-family: 'Noto Sans Mono', monospace;
-        }
-
-        .sidebar-item {
-            font-size: 1.5rem;
-            padding: 0.5rem;
-        }
-
-        a:hover.sidebar-item {
-            background-color: #330066;
-            border-radius: 0.5rem;
-        }
-
-        a {
-            text-decoration: none;
-            color: #FFFFFF
-        }
-
         .codeEditor,
         .lineCounter {
             font-family: monospace;
@@ -72,14 +50,11 @@
         .codeEditor {
             padding-left: calc(3.5rem + 5px);
             width: 100%;
+            white-space: pre-wrap;
             /* Determine appearance of code editor */
             background-color: #20043f;
             border: solid #ffffff;
             color: #ffffff;
-        }
-
-        .material-icons.md-48 {
-            font-size: 48px;
         }
     </style>
     <title>ChauLe19's Page</title>
@@ -91,7 +66,7 @@
             <div style="padding:1rem; font-size:2rem">
                 Chau Le
             </div>
-            <a href="#" class="sidebar-item">
+            <a href="/" class="sidebar-item">
                 Home
             </a>
             <a href="/projects.html" class="sidebar-item">
@@ -120,27 +95,46 @@
                 </div>
             </div>
         </div>
-        <div style="flex-grow:1;display: flex; font-size: 2rem; flex-direction: column; text-align: center;">
+        <div
+            style="flex-grow:1;display: flex; font-size: 2rem; flex-direction: column; text-align: center; padding: 1rem;">
             <div>Text Transformer</div>
-            <button onclick="copy2Clipboard()">Copy to clipboard</button>
-            <div style="display:flex;flex-direction: row; font-size: 1.5rem;">
-                <div style="padding: 1rem; width: 48%;">
-                    <textarea id='lineCounter1' class="lineCounter" wrap='off' readonly>1.</textarea>
-                    <textarea id='codeEditor1' class="codeEditor" wrap='soft'
-                        placeholder="Enter text here..."></textarea>
-                </div>
-                <div style="width: 5rem; display: flex; justify-content: center; align-items: center;">
-                    <i class="fa fa-arrow-right fa-3x"></i>
-                </div>
-                <div style="padding: 1rem; width: 48%;">
-                    <textarea id='lineCounter2' class="lineCounter" wrap='off' readonly>1.</textarea>
-                    <textarea id='codeEditor2' class="codeEditor" wrap='soft'
-                        placeholder="Transformed text will be output here..."></textarea>
+            <div style="padding-top: 1rem; padding-bottom: 1rem;">
+                <div style="display:flex;flex-direction: row; font-size: 1.5rem;">
+                    <div style="flex:1;">
+                        <button id="clipboard-button-1"
+                            style="width: 100%; border-bottom-left-radius: 0; border-bottom-right-radius: 0;">Copy to
+                            clipboard</button>
+                        <textarea id='lineCounter1' style="border-top-left-radius: 0;" class="lineCounter" wrap='off'
+                            readonly>1.</textarea>
+                        <textarea id='codeEditor1' class="codeEditor" wrap='soft' style="border-top-right-radius: 0;"
+                            placeholder="Enter text here..."></textarea>
+                    </div>
+                    <div
+                        style="display: flex; flex-direction: column; justify-content: center; align-items: center; padding-left: 1rem; padding-right: 1rem;">
+                        <button type="button" onclick="transform()">Transform</button>
+                        <i class="fa fa-arrow-right fa-2x"></i>
+                    </div>
+                    <div style="flex:1;">
+                        <button id="clipboard-button-2"
+                            style="width: 100%; border-bottom-left-radius: 0; border-bottom-right-radius: 0;">Copy to
+                            clipboard</button>
+                        <textarea id='lineCounter2' class="lineCounter" style="border-top-left-radius: 0;" wrap='off'
+                            readonly>1.</textarea>
+                        <textarea id='codeEditor2' class="codeEditor" wrap='soft' style="border-top-right-radius: 0;"
+                            placeholder="Transformed text will be output here..."></textarea>
+                    </div>
                 </div>
             </div>
-            <button type="button" onclick="transform()">Click Me!</button>
-            <div style="padding: 1rem; text-align: left;">
-                <span style="font-size: 1rem; padding-left: 3.5rem;">funtion transform(text){</span>
+            <div style="display: flex; flex-grow: 1; padding-top: 1rem; padding-bottom: 1rem;">
+            </div>
+            <i class="fa-solid fa-arrow-up fa-2x"></i>
+            <div>
+                <select name="func" id="func-select">
+                </select>
+                <button type="button" onclick="save()">Save</button>
+            </div>
+            <div style="text-align: left;">
+                <span style="font-size: 1rem; padding-left: 3.5rem;">function transform(text) {</span>
                 <textarea id='lineCounter3' class="lineCounter" wrap='off' readonly>1.</textarea>
                 <textarea id='codeEditor3' class="codeEditor" wrap='soft'>
                 </textarea>
@@ -151,6 +145,21 @@
     </div>
 </body>
 <script>
+    const cb1 = document.getElementById('clipboard-button-1');
+    const cb2 = document.getElementById('clipboard-button-2');
+    var clipboardTimeout1;
+    var clipboardTimeout2;
+    const functionSelect = document.getElementById('func-select');
+    function populateFunctionOptions() {
+        functionSelect.innerHTML = ""
+        for (const key of Object.keys(localStorage)) {
+            const dropdownItem = document.createElement("option");
+            dropdownItem.value = key;
+            dropdownItem.innerText = key;
+            functionSelect.append(dropdownItem)
+        }
+    }
+    populateFunctionOptions();
     var codeEditor1 = document.getElementById('codeEditor1');
     var lineCounter1 = document.getElementById('lineCounter1');
     var codeEditor2 = document.getElementById('codeEditor2');
@@ -158,7 +167,15 @@
     var codeEditor3 = document.getElementById('codeEditor3');
     var lineCounter3 = document.getElementById('lineCounter3');
     codeEditor3.value = "return text"
-    line_counter(codeEditor3, lineCounter3, 1)
+    if (Object.keys(localStorage).length > 0) {
+        codeEditor3.value = localStorage.getItem(functionSelect.options[0].value)
+    }
+
+    functionSelect.onchange = function () {
+        codeEditor3.value = localStorage.getItem(this.options[this.selectedIndex].value)
+        line_counter(codeEditor3, lineCounter3)
+    }
+    line_counter(codeEditor3, lineCounter3)
     addTextareaEvents(codeEditor1, lineCounter1);
     addTextareaEvents(codeEditor2, lineCounter2);
     addTextareaEvents(codeEditor3, lineCounter3);
@@ -194,14 +211,39 @@
         lineCountCache = lineCount;
     }
 
-    function copy2Clipboard() {
-        navigator.clipboard.writeText(codeEditor2.value);
+    cb1.onclick = () => {
+        copy2Clipboard(cb1, codeEditor1, clipboardTimeout1);
+    }
+    cb2.onclick = () => {
+        copy2Clipboard(cb2, codeEditor2, clipboardTimeout2);
+    }
+    function copy2Clipboard(cb, codeEditor, clipboardTimeout) {
+        navigator.clipboard.writeText(codeEditor.value);
+        cb.innerText = 'Copied!'
+        clearTimeout(clipboardTimeout)
+        clipboardTimeout = setTimeout(() => cb.innerText = 'Copy to clipboard', 3000);
     }
 
     function transform() {
         const fn = new Function(['text'], codeEditor3.value)
         result = fn(codeEditor1.value);
         codeEditor2.value = typeof result === 'object' ? JSON.stringify(result) : result
+    }
+
+    function save() {
+        let cacheName;
+        let name = prompt("Please enter the transformation name: ");
+        if (name == null || name == "") {
+        } else {
+            if (localStorage.getItem(name)) {
+                alert("This name already exists! Please change its name or delete the existing one and try again.");
+            }
+            else {
+                localStorage.setItem(name, codeEditor3.value);
+                alert("Saved!");
+                populateFunctionOptions();
+            }
+        }
     }
 </script>
 
