--- a/index.html
+++ b/index.html
@@ -8,31 +8,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+Mono&display=swap" rel="stylesheet">
-    <!-- <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" -->
-    <!-- integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous"> -->
-    <style>
-        html {
-            height: 100%;
-            background: #190033;
-            color: #FFFFFF;
-            font-family: 'Noto Sans Mono', monospace;
-        }
-
-        .sidebar-item {
-            font-size: 1.5rem;
-            padding: 0.5rem;
-        }
-
-        a:hover.sidebar-item {
-            background-color: #330066;
-            border-radius: 0.5rem;
-        }
-
-        a {
-            text-decoration: none;
-            color: #FFFFFF
-        }
-    </style>
+    <link rel="stylesheet" href="global.css">
     <title>ChauLe19's Page</title>
 </head>
 
@@ -45,7 +21,7 @@
             <a href="#" class="sidebar-item">
                 Home
             </a>
-            <a href="/projects.html"  class="sidebar-item">
+            <a href="/projects.html" class="sidebar-item">
                 Projects
 
             </a>
@@ -72,7 +48,8 @@
             </div>
         </div>
         <div style="justify-content: center; align-items: center; flex-grow:1;display: flex; font-size: 2rem;">
-            <div>Hi, I'm Chau Le<div>A programmer who enjoys making stuff.</div></div>
+            <div>Hi, I'm Chau Le<div>A programmer who enjoys making stuff.</div>
+            </div>
         </div>
     </div>
 </body>
