--- a/projects.html
+++ b/projects.html
@@ -8,8 +8,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+Mono&display=swap" rel="stylesheet">
-    <!-- <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" -->
-    <!-- integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous"> -->
+    <link rel="stylesheet" href="global.css">
     <style>
         html {
             height: 100%;
@@ -72,7 +71,7 @@
                 </div>
             </div>
         </div>
-        <div style="flex-grow:1;display: flex; font-size: 2rem; flex-direction: column;">
+        <div style="flex-grow:1;display: flex; font-size: 2rem; flex-direction: column; padding: 1rem;">
             <div style="align-items: center;">
                 <div style="text-align:center;">Programming Projects</div>
                 <div style="display:flex;flex-direction: row; font-size: 1.5rem;">
