--- a/404.html
+++ b/404.html
@@ -2,6 +2,7 @@
 <html>
   <head>
     <meta charset="utf-8">
+    <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
     <title>Chau Le</title>
     <script type="text/javascript">
       // Single Page Apps for GitHub Pages
